rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q775_1997_TCAP-Examples.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q775_1997_TCAP-Examples.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod tcap_examples {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum BasicServiceIndicator {
        speech = 0,
        unrestrictedDigital = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct CallingPartyAddress(pub IsdnNumber);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct IsdnNumber {
        #[rasn(identifier = "typeOfAddress")]
        pub type_of_address: TypeOfAddress,
        pub digits: TelephonyString,
    }
    impl IsdnNumber {
        pub fn new(type_of_address: TypeOfAddress, digits: TelephonyString) -> Self {
            Self {
                type_of_address,
                digits,
            }
        }
    }
    #[doc = " data types"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct RequestArgument {
        #[rasn(identifier = "calledNumber")]
        pub called_number: IsdnNumber,
        #[rasn(identifier = "basicService")]
        pub basic_service: Option<BasicServiceIndicator>,
    }
    impl RequestArgument {
        pub fn new(
            called_number: IsdnNumber,
            basic_service: Option<BasicServiceIndicator>,
        ) -> Self {
            Self {
                called_number,
                basic_service,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum RoutingInformation {
        #[rasn(tag(context, 0))]
        reroutingNumber(IsdnNumber),
        #[rasn(tag(context, 1))]
        forwardedToNumber(IsdnNumber),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(
        delegate,
        size("1..=15"),
        from(
            "\u{23}", "\u{2a}", "\u{30}", "\u{31}", "\u{32}", "\u{33}", "\u{34}", "\u{35}",
            "\u{36}", "\u{37}", "\u{38}", "\u{39}"
        )
    )]
    pub struct TelephonyString(pub Ia5String);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum TypeOfAddress {
        national = 0,
        international = 1,
        private = 2,
    }
}
