rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q775_1997_TCAP-Tools.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q775_1997_TCAP-Tools.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod tcap_tools {
    extern crate alloc;
    use super::remote_operations_information_objects::*;
    use super::tcapmessages::TCInvokeIdSet;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum CancelProblem {
        unknownInvocation = 0,
        tooLate = 1,
        notCancellable = 2,
    }
}
