rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q814_2000_InteractiveAgent.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q814_2000_InteractiveAgent.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod interactive_agent {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum BasicMessage {
        basicMessage1(GeneralString),
        basicMessage2(Ia5String),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct EnhancedMessage(pub OctetString);
    #[doc = " EXPORTS everything"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum IaMessage {
        basicMessage(BasicMessage),
        iaStatusMessage(IaStatusMessage),
        enhancedMessage(EnhancedMessage),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct IaStatusMessage(pub FixedBitString<32usize>);
}
